test/tests/stages/18_structures/invalid_types/invalid_member_operators/nested_arrow_pointer_to_non_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: l
            Long: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: has_ptr
        Bool: 0
        List[1]: 
          CMemberDeclaration: 
            TIdentifier: ptr
            Pointer: 
              Double: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: d
                  CSingleInit: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 0.000000
                      None: 
                    None: 
                  Double: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: p_struct
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CAddrOf: 
                          CVar: 
                            TIdentifier: d
                            None: 
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: has_ptr
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CArrow: 
                  TIdentifier: l
                  CDot: 
                    TIdentifier: ptr
                    CVar: 
                      TIdentifier: p_struct
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
